gcp/argocd/addons/envoy-gateway-config/gateway.yaml
# Auto-generated file, do not edit directly
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: us-central1-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: eg
  listeners:
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.mhaigh-us-central1.k8sbackup.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls
            kind: Secret
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.mhaigh-us-central1.k8sbackup.dev"
      allowedRoutes:
        namespaces:
          from: Same
